test/compile_failure/03_global_redefinition.c
// EXPECT-ERRORS: 1
// EXPECT: redefinition of 'value'
int value;
int value;
